--- a/Database/MySQL/存储过程.md
+++ b/Database/MySQL/存储过程.md
@@ -1,6 +1,15 @@
 # 存储过程
 
-**注意**
+## 存储过程的定义以及好处
+
+>定义: 存储过程可以看成是对一系列 SQL 操作的批处理。
+
+使用存储过程的好处：
+
+- 代码复用；
+- 由于是预先编译，因此具有很高的性能。
+
+## 存储过程的实现规范以及特点
 
 ```sql
 CREATE PROCEDURE 存储过程名(IN|OUT|INOUT 参数名  参数类型,...)
@@ -8,15 +17,33 @@ BEGIN
     存储过程体
 END
 -- 存储过程体中可以有多条sql语句，如果仅仅一条sql语句，则可以省略begin end
--- 参数前面的符号的意思
+-- 包含 in、out 和 inout 三种参数
   -- in:该参数只能作为输入 （该参数不能做返回值）
   -- out：该参数只能作为输出（该参数只能做返回值）
   -- inout：既能做输入又能做输出
 ```
 
-## 调用存储过程
+1. 命令行中创建存储过程需要自定义分隔符，因为命令行是以 ; 为结束符，而存储过程中也包含了分号，因此会错误把这部分分号当成是结束符，造成语法错误。
+2. 给变量赋值都需要用SELECT.....INTO语句
+3. 每次只能给一个变量赋值，不支持集合的操作。
+
+## 存储过程的实例以及调用
 
 ```sql
-call 存储过程名(实参列表)
+DELIMITER //
+
+CREATE PROCEDURE myprocedure(OUT ret INT)
+    BEGIN
+        DECLARE y INT;
+        SELECT SUM(score) FROM student INTO y;
+        SELECT y*y INTO ret;
+    END //
+
+DELIMITER ;
 ```
 
+```sql
+-- 调用存储过程: call 存储过程名(实参列表)
+CALL myprocedure(@ret);
+SELECT @ret;
+```
