--- a/Database/SQL/02_表中数据的查询操作.md
+++ b/Database/SQL/02_表中数据的查询操作.md
@@ -41,6 +41,9 @@ SELECT * FROM students WHERE class_id <> 2;
 
 -- %表示任意字符,%表示0个到多个，_表示1个
 SELECT * FROM students WHERE name LIKE '小%';
+
+-- 使用DISTINCT，相同值只会出现一次。它作用于所有列，也就是说所有列的值都相同才算相同。
+SELECT DISTINCT id, name, gender, score FROM student;
 ```
 
 ## 投影查询(只查询需要的列)
@@ -74,6 +77,9 @@ SELECT id, name, gender, score FROM student ORDER BY score desc, gender;
 
 -- 如果有WHERE子句，那么ORDER BY子句要放到WHERE子句后面
 SELECT id, name, gender, score FROM student WHERE class_id = 1 ORDER BY score DESC;
+
+-- 可以按多个列进行排序，并且为每个列指定不同的排序方式：
+SELECT * FROM student ORDER BY score DESC, gender ASC;
 ```
 
 ## 分页查询
