--- a/JAVA/core/src/main/resources/JVM/1.2_JVM对象分代内存划分与垃圾回收.md
+++ b/JAVA/core/src/main/resources/JVM/1.2_JVM对象分代内存划分与垃圾回收.md
@@ -20,17 +20,19 @@
 
 >现在我们从另外一个角度对JVM的运行时内存进行划分：堆(Heap)堆和非堆(Non-heap)内存
 
- 按照官方的说法：“Java 虚拟机具有一个堆，所有类实例和数组的内存均从此处分配。堆是在 Java 虚拟机启动时创建的。”“在JVM中堆之外的内存称为非堆内存(Non-heap memory)”。
+ 按照官方的说法：“Java 虚拟机具有一个堆，几乎所有类实例和数组的内存均从此处分配。堆是在 Java 虚拟机启动时创建的。”“在JVM中堆之外的内存称为非堆内存(Non-heap memory)”。
 
 ## 一、基于对象分代年龄的内存划分
 
 从对象分代的角度来说，JVM的内存大致分为3块：分别是Permanent Generation（简称PermGen、持久代）、New Generation(又叫Young Generation，年轻代)和Tenured Generation（又叫Old Generation，年老代）。其中Permanent Generation位于non-heap区。New和Old是Java应用的Heap区，用来存放类实例的。
 
->Tenured: 终身的， Survivor: 幸存者, Eden:伊甸园
+>Tenured: 终身的， Survivor: 幸存者, Eden:伊甸园，新生儿
 
 ![](根据对象分代年龄划分JVM内存.png)
 
 ![](Hotspot堆内存结构图.png)
+
+其中New Generation的目标就是尽可能快速的收集掉那些生命周期短的对象；Eden Space用于存放新创建的对象，From区和To区都是幸存空间；当Eden区满时，JVM执行垃圾回收，并会将Eden Space还存活的对象复制到当前的From空间，一旦当前的From救助空间充满，此区的存活对象将被复制到另外一个To区，当To区也满了的时候，从From区复制过来并且依然存活的对象复制到Old区，从而From和To空间互换角色，维持活动的对象将在survivor空间不断复制，直到最终转入Old域。需要注意，Survivor的两个区是对称的，没先后关系，而且Survivor区总有一个是空的。这样可以增加对象在年轻代中的存在时间，减少被放到年老代的可能。每一次垃圾回收后，Eden Space都会被清空。
 
 Old区用于存放长寿的对象，在New区中经历了N次垃圾回收后仍然存活的对象，就会被放到Old区中；如那些与业务信息相关的对象，包括Http请求中的Session对象、Socket连接等，这类对象跟业务直接挂钩，因此生命周期比较长。
 
@@ -69,7 +71,7 @@ Full GC要对整个Heap区进行回收，包括New、Old和PermGen，所以比Mi
 
 ### 2. 大对象直接进入老年代
 
-大对象是指需要连续内存空间的对象（种很长的字符串以及数组）
+大对象是指需要连续内存空间的对象（很长的字符串以及数组）
 
 经常出现大对象会提前触发垃圾收集以获取足够的连续空间分配给大对象。
 
