--- a/JAVA/core/src/main/resources/JVM/1.0_Java虚拟机运行时数据区.md
+++ b/JAVA/core/src/main/resources/JVM/1.0_Java虚拟机运行时数据区.md
@@ -99,11 +99,47 @@ Java 堆在虚拟机启动的时候就被创建，它存储了被自动内存管
 
 ## 元数据区(JDK1.8)
 
-在 `JDK1.8` 中已经移除了方法区（永久代），并使用了一个元数据区域进行代替（`Metaspace`）。
+在 `JDK1.8` 中已经移除了方法区（永久代），并使用了一个元数据区域进行代替（`Metaspace`）,使用 `MetaSpace` 来保存类加载之后的类信息.字符串常量池也被移动到 Java 堆
 
-默认情况下元数据区域会根据使用情况动态调整，避免了在 1.7 中由于加载类过多从而出现 `java.lang.OutOfMemoryError: PermGen`。
+`PermSize` 和 `MaxPermSize` 已经不能使用了，在 JDK8 中配置这两个参数将会发出警告。
 
-但也不能无线扩展，因此可以使用 `-XX:MaxMetaspaceSize`来控制最大内存。
+JDK 8 中将类信息移到到了本地堆内存(Native Heap)中，将原有的永久代移动到了本地堆中成为 `MetaSpace` ,如果不指定该区域的大小，JVM 将会动态的调整。避免了在 1.7 中由于加载类过多从而出现 `java.lang.OutOfMemoryError: PermGen`。
+
+但也不能无线扩展，因此可以使用 `-XX:MaxMetaspaceSize=10M`来控制最大元数据内存。这样当不停的创建类时将会占满该区域并出现 `OOM`。
+
+```java
+    public static void main(String[] args) {
+        while (true){
+            Enhancer  enhancer = new Enhancer() ;
+            enhancer.setSuperclass(HeapOOM.class);
+            enhancer.setUseCache(false) ;
+            enhancer.setCallback(new MethodInterceptor() {
+                @Override
+                public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+                    return methodProxy.invoke(o,objects) ;
+                }
+            });
+            enhancer.create() ;
+
+        }
+    }
+```
+使用 `cglib` 不停的创建新类，最终会抛出:
+```
+Caused by: java.lang.reflect.InvocationTargetException
+	at sun.reflect.GeneratedMethodAccessor1.invoke(Unknown Source)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at net.sf.cglib.core.ReflectUtils.defineClass(ReflectUtils.java:459)
+	at net.sf.cglib.core.AbstractClassGenerator.generate(AbstractClassGenerator.java:336)
+	... 11 more
+Caused by: java.lang.OutOfMemoryError: Metaspace
+	at java.lang.ClassLoader.defineClass1(Native Method)
+	at java.lang.ClassLoader.defineClass(ClassLoader.java:763)
+	... 16 more
+```
+
+注意：这里的 OOM 伴随的是 `java.lang.OutOfMemoryError: Metaspace` 也就是元数据溢出。
 
 ## 常用参数
 
