--- a/Database/MySQL/00_字符集,校对规则.md
+++ b/Database/MySQL/00_字符集,校对规则.md
@@ -1,4 +1,25 @@
-#### 字符集(CHARACTER SET)
+## 字符集编码(CHARACTER SET)
+
+```mysql
+-- 数据库、表、字段均可设置编码
+-- 数据编码与客户端编码不需一致
+
+SHOW VARIABLES LIKE 'character_set_%'   -- 查看所有字符集编码项
+    character_set_client        客户端向服务器发送数据时使用的编码
+    character_set_results       服务器端将结果返回给客户端所使用的编码
+    character_set_connection    连接层编码
+    
+SET 变量名 = 变量值
+    SET character_set_client = gbk;
+    SET character_set_results = gbk;
+    SET character_set_connection = gbk;
+    
+SET NAMES GBK;  -- 相当于完成以上三个设置
+
+SHOW CHARACTER SET [LIKE 'pattern']/SHOW CHARSET [LIKE 'pattern']   查看所有字符集
+
+CHARSET 字符集编码     设置字符集编码
+```
 
 无论哪种文字，日文，韩文，中文，英文，在计算机上存储的时候都是0和1构成.
 
@@ -40,12 +61,18 @@ default-character-set=utf8
 
 >直接在cmd命令行设置的编码是session级别的。也就是说，我们设置的编码只在当前会话起作用。关闭掉当前会话，重新开启，设置就会失效。如果设置多个会话的字符集那么需要设置global范围:Set [global|session] variables …(不论设置session级别的还是global级别的，重启sql以后，都会失效.)
 
-### 校对规则
+## 校对规则
 
 查看当前数据库的校对规则:`show variables like 'collation%';`
 查看数据库中所有的校对规则: `show collation;`
 
 >Collation校对规则：负责决定某一字符集下的字符进行比较和排序的结果。
+
+```sql
+-- 校对集: 校对集用以排序
+    SHOW COLLATION [LIKE 'pattern']     查看所有校对集
+    COLLATE 校对集编码     设置校对集编码
+```
 
 创建一个数据库db2,字符集用gbk，校对规则用gbk_bin
 create database db1 character set gbk collate gbk_bin;
