--- a/Database/SQL/02_表中数据的查询操作.md
+++ b/Database/SQL/02_表中数据的查询操作.md
@@ -24,7 +24,13 @@
 2. OR
 3. NOT <条件>: 表示“不符合该条件”的记录.
 4. 要组合三个或者更多的条件，就需要用小括号()表示如何进行条件运算.
-5. 如果不加括号，条件运算按照NOT、AND、OR的优先级进行，即NOT优先级最高，其次是AND，最后是OR。加上括号可以改变优先级。
+5. 如果不加括号，条件运算按照NOT、AND、OR的优先级进行，即NOT优先级最高，其次是AND，最后是OR。可以使用 () 来决定优先级，使得优先级关系更清晰.
+6. <>或者!=: 不等于
+7. =,>,<,>=,<=: 等于，大于，小于，大于等于，小于等于
+8. BETWEEN: 在2个值之间,例如: BETWEEN 1 AND 20;包括1和20.
+9. IS NULL: 为 NULL 值(NULL 与 0、空字符串都不同)
+
+>不进行过滤的数据非常大，导致通过网络传输了多余的数据，从而浪费了网络带宽。因此尽量使用 SQL 语句来过滤不必要的数据，而不是传输所有的数据到客户端中然后由客户端进行过滤。
 
 ```sql
 -- 通过WHERE条件查询，可以筛选出符合指定条件的记录.条件查询的语法就是：`SELECT * FROM <表名> WHERE <条件表达式>`
