--- a/JAVA/core/src/main/resources/JVM/1.3_对象的创建过程以及对象的内存分配.md
+++ b/JAVA/core/src/main/resources/JVM/1.3_对象的创建过程以及对象的内存分配.md
@@ -2,14 +2,21 @@
 
 ## 创建对象
 
-当 `JVM` 收到一个 `new` 指令时，会检查指令中的参数在常量池是否有这个符号的引用，还会检查该类是否已经被加载过了，如果没有的话则要进行一次类加载。
+当 `JVM` 收到一个 `new` 指令时(比如执行 new MyClass())，去常量池中寻找,查看类是否被加载.如果没加载,则加载class.
 
-接着就是分配内存了，通常有两种方式：
+接着就是在java堆中分配内存空间，通常有两种方式：
 
 - 指针碰撞(前提是堆内存是完全工整的):使用指针碰撞的前提是堆内存是**完全工整**的，用过的内存和没用的内存各在一边,每次分配的时候只需要将指针向空闲内存一方移动一段区域即可。
 - 空闲列表(已经使用的内存和未使用的内存互相交错时):当堆中已经使用的内存和未使用的内存**互相交错**时，指针碰撞的方式就行不通了，这时就需要采用空闲列表的方式。虚拟机会维护一个空闲的列表，用于记录哪些内存是可以进行分配的，分配时直接从可用内存中直接分配即可。
 
 堆中的内存是否工整是有**垃圾收集器**来决定的，如果`带有压缩功能的垃圾收集器`就是采用指针碰撞的方式来进行内存分配的。
+
+>对象中的访问定位:
+
+1. 句柄池,句柄池从堆中划分,由实例地址和类型数据地址构成.
+2. 指针,可直接通过指针访问到实例对象
+
+>句柄的使用,方便了实例位置的改变,可以不改变引用,但是访问速度相对于指针低一些.
 
 ## 内存分配过程的并发问题
 
