--- a/JAVA/core/src/main/resources/JVM/3.0_ JVM启动参数大全及默认值.md
+++ b/JAVA/core/src/main/resources/JVM/3.0_ JVM启动参数大全及默认值.md
@@ -6,6 +6,22 @@
 2. 其二是非标准参数（-X），默认jvm实现这些参数的功能，但是并不保证所有jvm实现都满足，且不保证向后兼容；
 3. 其三是非Stable参数（-XX），此类参数各个jvm实现会有所不同，将来可能会随时取消，需要慎重使用；
 
+## 重点参数(先介绍重点再介绍具体分类)
+
+```
+永久代:-XX:PermSize20M -XX:MaxPermSize20M
+
+堆大小: -Xms20M -Xmx20M
+
+新生代: -Xmn10M
+
+Eden与survior比率: -XX:SurvivorRation=8
+
+让大对象直接进入老年代: -XX:PretrnureSizeThreshold=1B
+
+年龄阈值:-XX:MaxTenuringThreshold=15
+```
+
 ## 一、JVM标准参数(-)
 
 JVM的标准参数都是以"-"开头，通过输入`"java -help"或者"java -?"`，可以查看JVM标准参数列表。如
