--- a/JAVA/core/src/main/resources/JVM/5.2_Java类加载机制之双亲委派模型.md
+++ b/JAVA/core/src/main/resources/JVM/5.2_Java类加载机制之双亲委派模型.md
@@ -4,9 +4,9 @@
 
 ![](类加载器模型.jpg)
 
-- Bootstrap ClassLoader(启动类加载器): 负责将%JAVA_HOME%/lib目录中或-Xbootclasspath中参数指定的路径中的，并且是虚拟机识别的(按名称可以识别)类库加载到JVM中
-- Extension ClassLoader（扩展类加载器): 负责加载%JAVA_HOME%/lib/ext中的所有类库
-- Application ClassLoader（应用程序加载器): 负责ClassPath中的类库
+- Bootstrap ClassLoader(启动类加载器,使用 C++ 实现，是虚拟机自身的一部分): 负责将%JAVA_HOME%/lib目录中或-Xbootclasspath中参数指定的路径中的，并且是虚拟机识别的(仅按照文件名识别，如 rt.jar，名字不符合的类库即使放在 lib 目录中也不会被加载)类库加载到JVM中，启动类加载器无法被 Java 程序直接引用。
+- Extension ClassLoader（扩展类加载器，使用 Java 实现，独立于虚拟机，继承自抽象类 java.lang.ClassLoader): 这个类加载器是由 ExtClassLoader（sun.misc.Launcher$ExtClassLoader）实现的。负责加载%JAVA_HOME%/lib/ext中的所有类库，或者被 java.ext.dir 系统变量所指定路径中的所有类库加载到内存中，开发者可以直接使用扩展类加载器。
+- Application ClassLoader（应用程序加载器): 这个类加载器是由 AppClassLoader（sun.misc.Launcher$AppClassLoader）实现的，由于这个类加载器是 ClassLoader 中的 getSystemClassLoader() 方法的返回值，因此一般称为系统类加载器。它负责加载用户类路径（ClassPath）上所指定的类库，开发者可以直接使用这个类加载器，如果应用程序中没有自定义过自己的类加载器，一般情况下这个就是程序中默认的类加载器。
 
 应用程序是由三种类加载器互相配合从而实现类加载，除此之外还可以加入自己定义的类加载器。
 
@@ -77,7 +77,10 @@ public abstract class ClassLoader {
 
 ## 自定义类加载器实现
 
+程序中如果没有显式指定类加载器的话，默认是AppClassLoader来加载，它负责加载ClassPath目录中的所有类型，如果被加载的类型并没有在ClassPath目录中时，抛出java.lang.ClassNotFoundException异常。
+
+自定义类加载器一般是继承ClassLoader，如果要符合双亲委派规范，则重写findClass方法；要破坏的话，重写loadClass方法。
+
 以下代码中的 org.java.core.advanced.jvm.classloader.MyCustomClassLoader 是自定义类加载器，继承自 java.lang.ClassLoader，用于加载文件系统上的类。它首先根据类的全名在文件系统上查找类的字节代码文件（.class 文件），然后读取该文件内容，最后通过 defineClass() 方法来把这些字节代码转换成 java.lang.Class 类的实例。
 
 自定义类加载器核心是重写 findClass() 方法。
-
