--- a/JAVA/core/src/main/resources/JVM/5.3_类加载机制.md
+++ b/JAVA/core/src/main/resources/JVM/5.3_类加载机制.md
@@ -1,10 +1,12 @@
-# 四、类加载机制
+# 类加载机制
+
+虚拟机把描述类的数据从class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可以被虚拟机直接使用的java类型，这就是虚拟机的类加载机制。
 
 类是在运行期间第一次使用时是动态加载的，而不是一次性加载所有类。因为如果一次性加载，那么会占用很多的内存。
 
 ## 类的生命周期
 
-包括以下 7 个阶段：
+一个类从被加载到内存到卸载出内存，整个生命周期包括7 个阶段：
 
 -  **加载（Loading）** 
 -  **验证（Verification）** 
@@ -14,64 +16,118 @@
 - 使用（Using）
 - 卸载（Unloading）
 
-## 类加载过程
+加载、验证、准备、初始化和卸载，这五个阶段的顺序是确定的，而解析不一定。某些情况下，解析可能在初始化之后再开始，这就是java动态绑定
 
-包含了加载、验证、准备、解析和初始化这 5 个阶段。
+## 必须对类立即进行初始化的5种情况
 
-### 1. 加载
+java虚拟机规范中严格规定了有且只有5种情况必须对类立即进行初始化：
 
-加载是类加载的一个阶段，注意不要混淆。
+* 遇到new、getstatic、putstatic或invokestatic这四个指令时，必须进行初始化。
+
+    生成这几个指令的场景有：
+
+    - 使用new实例化一个对象时；
+    - 读取或者设置一个类的静态字段时；
+    - 调用一个类的静态方法时。
+* 使用reflect包的方法对类进行反射时，也触发初始化。
+* 初始化一个类的时候，若父类还未初始化，则首先进行父类的初始化。
+* 包含main方法的那个类，虚拟机启动时会首先初始化这个主类。
+* 当使用jdk1.7的动态语言支持时，
+
+##  接口的加载和类加载的过程的差异
+
+1. 接口和类一样都有初始化过程，虽然`接口里面不能有static{}语句块`，但是编译器仍然会为接口生成`<clinit>()类构造器`，用于初始化接口中所定义的成员变量。
+2. 当一个类初始化时，必须要求父类全部都已经初始化，但是接口在初始化时并不要求其父接口也全部初始化，只有在使用到父接口时才会初始化。
+
+## 1. 加载
+
+加载是类加载生命周期的一个阶段，注意不要混淆。
 
 加载过程完成以下三件事：
 
 - 通过类的完全限定名称获取该类的二进制字节流
 - 将该字节流表示的静态存储结构转换为方法区的运行时存储结构。
-- 在内存中生成一个代表该类的 Class 对象，作为方法区中该类各种数据的访问入口。
+- 在内存中生成一个代表该类的java.lang.Class对象，作为方法区中该类各种数据的访问入口。
 
 其中二进制字节流可以从以下方式中获取：
 
-- 从 ZIP 包读取，成为 JAR、EAR、WAR 格式的基础。
-- 从网络中获取，最典型的应用是 Applet。
-- 运行时计算生成，例如动态代理技术，在 java.lang.reflect.Proxy 使用 ProxyGenerator.generateProxyClass 的代理类的二进制字节流。
-- 由其他文件生成，例如由 JSP 文件生成对应的 Class 类。
+1. 从 ZIP 包读取，成为 JAR、EAR、WAR 格式的基础。
+2.  运行时计算生成，例如动态代理技术，在 java.lang.reflect.Proxy 使用 ProxyGenerator.generateProxyClass 的代理类的二进制字节流。
 
-### 2. 验证
+## 2. 验证
 
 确保 Class 文件的字节流中包含的信息符合当前虚拟机的要求，并且不会危害虚拟机自身的安全。
 
 ### 3. 准备
 
-类变量是被 static 修饰的变量，准备阶段为类变量分配内存并设置初始值，使用的是方法区的内存。
+准备阶段是给类变量分配内存并设置类变量初始值的阶段，这些变量所使用的内存都将在方法区中进行分配。
 
-实例变量不会在这阶段分配内存，它会在对象实例化时随着对象一起被分配在堆中。应该注意到，实例化不是类加载的一个过程，类加载发生在所有实例化操作之前，并且类加载只进行一次，实例化可以进行多次。
+此时进行内存分配的变量仅包括类变量，而不包含实例变量，实例变量将在对象实例化时随着对象一起分配在java堆中。
 
-初始值一般为 0 值，例如下面的类变量 value 被初始化为 0 而不是 123(不是初始化为程序猿主观定义的值，而是系统预定义的值)。
+这里所说的初始值是指数据类型的零值，比如：
 
-```java
-public static int value = 123;
-```
+public static int v = 123;
 
-如果类变量是final的，那么它将初始化为表达式所定义的值而不是 0。例如下面的常量 value 被初始化为 123 而不是 0(初始化为程序猿主观定义的值)。
+那v的值在准备阶段是0，而不是123。
 
-```java
-public static final int value = 123;
-```
+<table>
+<thead><tr>
+<th>数据类型</th>
+<th>零值</th>
+<th>数据类型</th>
+<th>零值</th>
+</tr></thead>
+<tbody>
+<tr>
+<td>int</td>
+<td>0</td>
+<td>boolean</td>
+<td>false</td>
+</tr>
+<tr>
+<td>long</td>
+<td>0L</td>
+<td>float</td>
+<td>0.0f</td>
+</tr>
+<tr>
+<td>short</td>
+<td>(short)0</td>
+<td>double</td>
+<td>0.0d</td>
+</tr>
+<tr>
+<td>char</td>
+<td>'u0000'</td>
+<td>reference</td>
+<td>null</td>
+</tr>
+<tr>
+<td>byte</td>
+<td>(byte)0</td>
+<td> </td>
+<td> </td>
+</tr>
+</tbody>
+</table>
 
-### 4. 解析
+如果一个变量是常量，或者final类型的，那么在准备阶段就被初始化为常量值，如：
+
+public static final int v = 123;
+
+此时v的值在准备阶段是123。
+
+## 4. 解析
 
 将常量池的符号引用替换为直接引用的过程。
 
 其中解析过程在某些情况下可以在初始化阶段之后再开始，这是为了支持 Java 的动态绑定。
 
-<div data="补充为什么可以支持动态绑定 --> <--"></div>
+## 5. 初始化
 
-### 5. 初始化
+初始化阶段才真正开始执行类中定义的 Java 程序代码。初始化过程是一个执行`类构造器<clinit>()方法的过程`。在准备阶段，类变量已经赋过一次系统要求的初始值，而在初始化阶段，根据程序员通过程序制定的主观计划去初始化类变量和其它资源。
 
-<div data="modify -->"></div>
-
-初始化阶段才真正开始执行类中定义的 Java 程序代码。初始化过程是一个执行类构造器<clinit>()方法的过程。在准备阶段，类变量已经赋过一次系统要求的初始值，而在初始化阶段，根据程序员通过程序制定的主观计划去初始化类变量和其它资源。
-
-&lt;clinit>() 是由编译器自动收集类中所有类变量的赋值动作和静态语句块中的语句合并产生的，编译器收集的顺序由语句在源文件中出现的顺序决定。特别注意的是，静态语句块只能访问到定义在它之前的类变量，定义在它之后的类变量只能赋值，不能访问。例如以下代码：
+特别注意的是，静态语句块只能访问到定义在它之前的类变量，定义在它之后的类变量只能赋值，不能访问。例如以下代码：
 
 ```java
 public class Test {
@@ -83,7 +139,9 @@ public class Test {
 }
 ```
 
-由于父类的 &lt;clinit>() 方法先执行，也就意味着父类中定义的静态语句块的执行要优先于子类。例如以下代码：
+<clinit>()方法和类的构造函数不同，它不需要显示调用父类构造器，虚拟机会保证在子类的<clinit>()方法执行之前，父类的<clinit>()方法已经执行完毕。因此虚拟机第一个被执行<clinit>()方法的类肯定是java.lang.Object。
+
+>由于父类的 &lt;clinit>() 方法先执行，也就意味着父类中定义的静态语句块的执行要优先于子类。例如以下代码：
 
 ```java
 static class Parent {
@@ -102,68 +160,4 @@ public static void main(String[] args) {
 }
 ```
 
-接口中不可以使用静态语句块，但仍然有类变量初始化的赋值操作，因此接口与类一样都会生成 &lt;clinit>() 方法。但接口与类不同的是，执行接口的 &lt;clinit>() 方法不需要先执行父接口的 &lt;clinit>() 方法。只有当父接口中定义的变量使用时，父接口才会初始化。另外，接口的实现类在初始化时也一样不会执行接口的 &lt;clinit>() 方法。
-
-虚拟机会保证一个类的 &lt;clinit>() 方法在多线程环境下被正确的加锁和同步，如果多个线程同时初始化一个类，只会有一个线程执行这个类的 &lt;clinit>() 方法，其它线程都会阻塞等待，直到活动线程执行 &lt;clinit>() 方法完毕。如果在一个类的 &lt;clinit>() 方法中有耗时的操作，就可能造成多个线程阻塞，在实际过程中此种阻塞很隐蔽。
-
-## 类初始化时机
-
-### 1. 主动引用
-
-虚拟机规范中并没有强制约束何时进行加载，但是规范严格规定了有且只有下列五种情况必须对类进行初始化（加载、验证、准备都会随之发生）：
-
-- 遇到 new、getstatic、putstatic、invokestatic 这四条字节码指令时，如果类没有进行过初始化，则必须先触发其初始化。最常见的生成这 4 条指令的场景是：使用 new 关键字实例化对象的时候；读取或设置一个类的静态字段（被 final 修饰、已在编译期把结果放入常量池的静态字段除外）的时候；以及调用一个类的静态方法的时候。
-
-- 使用 java.lang.reflect 包的方法对类进行反射调用的时候，如果类没有进行初始化，则需要先触发其初始化。
-
-- 当初始化一个类的时候，如果发现其父类还没有进行过初始化，则需要先触发其父类的初始化。
-
-- 当虚拟机启动时，用户需要指定一个要执行的主类（包含 main() 方法的那个类），虚拟机会先初始化这个主类；
-
-- 当使用 JDK 1.7 的动态语言支持时，如果一个 java.lang.invoke.MethodHandle 实例最后的解析结果为 REF_getStatic, REF_putStatic, REF_invokeStatic 的方法句柄，并且这个方法句柄所对应的类没有进行过初始化，则需要先触发其初始化；
-
-### 2. 被动引用
-
-以上 5 种场景中的行为称为对一个类进行主动引用。除此之外，所有引用类的方式都不会触发初始化，称为被动引用。被动引用的常见例子包括：
-
-- 通过子类引用父类的静态字段，不会导致子类初始化。
-
-```java
-System.out.println(SubClass.value);  // value 字段在 SuperClass 中定义
-```
-
-- 通过数组定义来引用类，不会触发此类的初始化。该过程会对数组类进行初始化，数组类是一个由虚拟机自动生成的、直接继承自 Object 的子类，其中包含了数组的属性和方法。
-
-```java
-SuperClass[] sca = new SuperClass[10];
-```
-
-- 常量在编译阶段会存入调用类的常量池中，本质上并没有直接引用到定义常量的类，因此不会触发定义常量的类的初始化。
-
-```java
-System.out.println(ConstClass.HELLOWORLD);
-```
-
-## 类与类加载器
-
-两个类相等，需要类本身相等，并且使用同一个类加载器进行加载。这是因为每一个类加载器都拥有一个独立的类名称空间。
-
-这里的相等，包括类的 Class 对象的 equals() 方法、isAssignableFrom() 方法、isInstance() 方法的返回结果为 true，也包括使用 instanceof 关键字做对象所属关系判定结果为 true。
-
-## 类加载器分类
-
-从 Java 虚拟机的角度来讲，只存在以下两种不同的类加载器：
-
-- 启动类加载器（Bootstrap ClassLoader），使用 C++ 实现，是虚拟机自身的一部分；
-
-- 所有其它类的加载器，使用 Java 实现，独立于虚拟机，继承自抽象类 java.lang.ClassLoader。
-
-从 Java 开发人员的角度看，类加载器可以划分得更细致一些：
-
-- 启动类加载器（Bootstrap ClassLoader）此类加载器负责将存放在 &lt;JRE_HOME>\lib 目录中的，或者被 -Xbootclasspath 参数所指定的路径中的，并且是虚拟机识别的（仅按照文件名识别，如 rt.jar，名字不符合的类库即使放在 lib 目录中也不会被加载）类库加载到虚拟机内存中。启动类加载器无法被 Java 程序直接引用，用户在编写自定义类加载器时，如果需要把加载请求委派给启动类加载器，直接使用 null 代替即可。
-
-- 扩展类加载器（Extension ClassLoader）这个类加载器是由 ExtClassLoader（sun.misc.Launcher$ExtClassLoader）实现的。它负责将 &lt;JAVA_HOME>/lib/ext 或者被 java.ext.dir 系统变量所指定路径中的所有类库加载到内存中，开发者可以直接使用扩展类加载器。
-
-- 应用程序类加载器（Application ClassLoader）这个类加载器是由 AppClassLoader（sun.misc.Launcher$AppClassLoader）实现的。由于这个类加载器是 ClassLoader 中的 getSystemClassLoader() 方法的返回值，因此一般称为系统类加载器。它负责加载用户类路径（ClassPath）上所指定的类库，开发者可以直接使用这个类加载器，如果应用程序中没有自定义过自己的类加载器，一般情况下这个就是程序中默认的类加载器。
-
-<div data="modify <--"></div>
+虚拟机会保证一个类的 &lt;clinit>() 方法在多线程环境下被正确的加锁和同步，如果多个线程同时初始化一个类，只会有一个线程执行这个类的 &lt;clinit>() 方法，其它线程都会阻塞等待，直到活动线程执行 &lt;clinit>() 方法完毕。
