--- a/Database/MySQL/01_数据库的管理和使用.md
+++ b/Database/MySQL/01_数据库的管理和使用.md
@@ -19,17 +19,25 @@ mysql -u root -p < schema.sql
 -- 虽然SELECT可以用作计算，但它并不是SQL的强项。但是，不带FROM子句的SELECT语句有一个有用的用途，
 -- 就是用来判断当前到数据库的连接是否有效。许多检测工具会执行一条SELECT 1;来测试数据库连接。
 SELECT 1;
+
+-- 查看当前数据库
+    SELECT DATABASE();
+-- 显示当前时间、用户名、数据库版本
+    SELECT now(), user(), version();
 ```
 
 数据库创建与使用：
 
 ```sql
 -- 创建数据库
-CREATE DATABASE IF NOT EXISTS test CHARACTER SET utf8mb4;
+CREATE DATABASE IF NOT EXISTS test CHARACTER SET charset_name, COLLATE collation_name;
 
 -- 查看数据库
 SHOW DATABASES;
 
+-- 查看已有库
+    SHOW DATABASES [ LIKE 'PATTERN']
+    
 -- 选择数据库
 USE test;
 
@@ -42,6 +50,9 @@ drop database if exists <db_name>;
 
 # 列出当前数据库的所有表：
 SHOW TABLES;
+
+SHOW TABLES[ LIKE 'pattern']
+SHOW TABLES FROM  库名
 
 -- 修改数据库的字符集以及校对规则
 ALTER DATABASE <DBNAME> CHARACTER SET utf8 COLLATE utf8_general_ci;
