--- a/JAVA/EE/Netty/docs/1.4_NIO_Buffer.md
+++ b/JAVA/EE/Netty/docs/1.4_NIO_Buffer.md
@@ -1,6 +1,6 @@
-## NIO Buffer概述
+# NIO Buffer概述
 
-我们以`Buffer类`开始我们对java.nio软件包的浏览历程。这些类是java.nio的构造基础。我们将深入研究缓冲区，并学会怎样使用。
+我们以`java.nio.Buffer类`开始我们对java.nio包的浏览历程。这些类是java.nio的构造基础。
 
 一个Buffer对象是固定大小的数据的容器。其作用是一个存储器，
 尽管缓冲区作用于它们存储的原始数据类型，但缓冲区十分倾向于处理字节。
@@ -9,10 +9,18 @@
 对于离开缓冲区的传输，您想传递出去的数据被置于一个缓冲区，被传送到通道。对于传回缓冲区的传输，
 一个通道将数据放置在您所提供的缓冲区中。
 
-Buffer类有很多子类， Buffer类定义所有缓冲区类型共有的操作，无论是它们所包含的
-数据类型还是可能具有的特定行为。关于这么多Buffer类型，我们只关注ByteBuffer，因为在NIO网络编程中，通道直接从ByteBuffer中读取数据。
-不过好处在于，不同的Buffer实现类，api都是相似的，当我们学会了ByteBuffer，其他的类型的Buffer自然而言也就会了。
+## java.nio.Buffer
 
+Buffer类有很多子类， Buffer类定义`所有缓冲区类型`共有的操作(也就是抽象基类).关于这么多Buffer类型，我们只关注ByteBuffer，因为在NIO网络编程中，通道直接从ByteBuffer中读取数据。不过好处在于，不同的Buffer实现类，api都是相似的，当我们学会了ByteBuffer，其他的类型的Buffer自然而言也就会了。
+
+```java
+// 见: Netty下的NIO_Example中的org.netty.core.concept.Buffer
+public abstract class Buffer {}
+
+// 在Java NIO中使用的核心缓冲区如下（覆盖了通过I/O发送的基本数据类型：byte, char、short, int, long, float, double ，long）：
+// ByteBuffer,CharBuffer,ShortBuffer,IntBuffer,FloatBuffer,DoubleBuffer,LongBuffer
+```
+ 
 ### NIO与IO的区别
 
 1. IO：阻塞IO、无选择器
