--- a/JAVA/EE/Netty/docs/1.5_Channel.md
+++ b/JAVA/EE/Netty/docs/1.5_Channel.md
@@ -2,14 +2,14 @@
 
 ### Channel的理解以及Channel与流的不同
 
-通道(Channel)可以理解为数据传输的管道。通道与流不同的是，流只是在一个方向上移动
-(一个流必须是inputStream或者outputStream的子类)，而通道可以用于读、写或者同时用于读写。
+通道(Channel)可以理解为`数据传输的管道`。通道与流不同的是，流只是在一个方向上移动
+(一个流必须是InputStream或者OutputStream的子类)，而通道可以用于读、写或者同时用于读写。
 
-public interface Channel{}顶级类位于java.nio.channels包下，channel本身不能直接访问数据，
+`public interface Channel{}`顶级类位于java.nio.channels包下，channel本身不能直接访问数据，
 channel只能与buffer交互。channel本身不存储数据，因此需要配合缓冲区进行传输。
 
 >channel类的继承关系见图:`Channel类的集成关系.png`,(为了清晰的显示我们的关注点，只显示了我们关心的Channel：
-FileChannel，SocketChannel，ServerSocketChannel，DatagramChannel)
+FileChannel，SocketChannel，ServerSocketChannel，DatagramChannel---也是Java NIO中，主要使用的通道，涵盖了UDP 和 TCP 网络IO，以及文件IO)
 
 I/O 可以分为广义的两大类别： `File I/O`, `Stream I/O`,那么相应地有两种类型的通道也就不足为怪了，它们是文件（FileChannel 类）通道和套接字（ socket---SocketChannel、 ServerSocketChannel 和 DatagramChannel）通道.
 
