--- a/JAVA/EE/Netty/docs/1.4_NIO_Buffer.md
+++ b/JAVA/EE/Netty/docs/1.4_NIO_Buffer.md
@@ -2,10 +2,9 @@
 
 我们以`java.nio.Buffer类`开始我们对java.nio包的浏览历程。这些类是java.nio的构造基础。
 
-一个Buffer对象是固定大小的数据的容器。其作用是一个存储器，
-尽管缓冲区作用于它们存储的原始数据类型，但缓冲区十分倾向于处理字节。
+Java NIO Buffers用于和NIO Channel交互。Buffer本质上就是一块内存区。这块内存被NIO Buffer管理，并提供一系列的方法用于更简单的操作这块内存。`尽管缓冲区作用于它们存储的原始数据类型，但缓冲区十分倾向于处理字节。`
 
-缓冲区的工作与通道紧密联系。通道是 I/O 传输发生时通过的入口，而缓冲区是这些数据传输的来源或目标。
+缓冲区Buffer的工作与通道Channel紧密联系。通道是 I/O 传输发生时通过的入口，而缓冲区是这些数据传输的来源或目标。
 对于离开缓冲区的传输，您想传递出去的数据被置于一个缓冲区，被传送到通道。对于传回缓冲区的传输，
 一个通道将数据放置在您所提供的缓冲区中。
 
@@ -13,37 +12,54 @@
 
 Buffer类有很多子类， Buffer类定义`所有缓冲区类型`共有的操作(也就是抽象基类).关于这么多Buffer类型，我们只关注ByteBuffer，因为在NIO网络编程中，通道直接从ByteBuffer中读取数据。不过好处在于，不同的Buffer实现类，api都是相似的，当我们学会了ByteBuffer，其他的类型的Buffer自然而言也就会了。
 
+![](Buffer继承关系图.png)
+
 ```java
-// 见: Netty下的NIO_Example中的org.netty.core.concept.Buffer
+// 见: Netty下的NIO_Example中的org.netty.core.source.Buffer看Buffer常用的方法
 public abstract class Buffer {}
 
 // 在Java NIO中使用的核心缓冲区如下（覆盖了通过I/O发送的基本数据类型：byte, char、short, int, long, float, double ，long）：
 // ByteBuffer,CharBuffer,ShortBuffer,IntBuffer,FloatBuffer,DoubleBuffer,LongBuffer
+
+// Buffer类内部持有一个数组，Buffer类相比一个简单数组的优点是它将数据的数据内容和信息包含在一个单一的对象中，有7种类型的Buffer(内部持有的数组的类型不同):ByteBuffer,CharBuffer,ShortBuffer IntBuffer，DoubleBuffer, LongBuffer， FloatBuffer（没有boolean类型的缓冲区）.把这些Buffer类通用的操作API抽离出来，就是抽象的Buffer
 ```
  
-### NIO与IO的区别
-
-1. IO：阻塞IO、无选择器
-2. NIO：非阻塞IO、有选择器
-
-### 缓冲区基础
-
-缓冲区是一个对象，这个对象内部持有一个数组。 Buffer类相比一个简单数组的优点是它将关于数据的数据内容
-和信息包含在一个单一的对象中，根据数据类型不同，就会有不同的数据类型的缓冲区，有7种类型的缓冲区:
-ByteBuffer,IntBuffer， DoubleBuffer， ShortBuffer， LongBuffer， FloatBuffer，和 CharBuffer（没有boolean类型的缓冲区）.
-把这些Buffer类通用的操作AIP抽离处理，就是抽象的Buffer，以上这些类是这个抽象Buffer的子类。
+## 缓冲区(Buffer)基础
 
 Buffer类定义了所有的缓冲区都具有四个属性来提供关于其所包含的数据元素的信息。
 
 1. 容量（ Capacity）:缓冲区能够容纳的数据元素的最大数量，可以理解为数组的长度。 
 这一容量在缓冲区创建时被设定，并且永远不能被改变。
 2. 上界（ Limit）:缓冲区的第一个不能被读或写的元素的索引。或者说，缓冲区中现存元素的计数。
-3. 位置（ Position）:下一个要被读或写的元素的索引。Buffer类提供了get( )和 put( )函数
-来读取或存入数据，position位置会自动进行相应的更新
+3. 位置（ Position）:下一个要被读或写的位置的索引。默认初始化时这个位置position为0,position最大可以到capacity-1.
+,Buffer类提供了get( )和 put( )函数来读取或存入数据，position位置会自动进行相应的更新
 4. 标记（ Mark）:一个备忘位置。调用 mark( )来设定 mark = postion。调用 reset( )设定 position = mark。
 标记在设定前是未定义的(undefined)。
 
 >这四个属性之间总是遵循以下关系：0 <= mark <= position <= limit <= capacity
+
+## 利用Buffer读写数据，通常遵循四个步骤：
+
+1. 把数据写入buffer；
+2. 调用flip；
+3. 从Buffer中读取数据；
+4. 调用buffer.clear()或者buffer.compact()。
+
+---
+    position和limit的具体含义取决于当前buffer的模式。capacity在两种模式下都表示容量。
+    
+    在写模式，limit的含义是我们所能写入的最大数据量，它等同于buffer的容量。
+    
+    一旦切换到读模式，limit则代表我们所能读取的最大数据量，他的值等同于写模式下position的位置。
+    换句话说，您可以读取与写入数量相同的字节数。
+
+![读写模式下position和limit的含义](读写模式下position和limit的含义.png)
+
+---
+
+>当写入数据到buffer中时，buffer会记录已经写入的数据大小。当需要读数据时，通过 flip() 方法把buffer从写模式调整为读模式(position会归零)；在读模式下，可以读取所有已经写入的数据。
+
+>当读取完数据后，需要清空buffer，以满足后续写入操作。清空buffer有两种方式：调用 clear() 或 compact() 方法。clear会清空整个buffer，compact则只清空已读取的数据，未被读取的数据会被移动到buffer的开始位置，写入位置则紧跟着未读数据之后。
 
 ### 直接缓冲区(direct byte buffer)
 
