--- a/JAVA/EE/Netty/docs/1.5_Channel.md
+++ b/JAVA/EE/Netty/docs/1.5_Channel.md
@@ -21,6 +21,7 @@ channel只能与buffer交互。channel本身不存储数据，因此需要配合
 - ServerSocketChannel(允许我们监听TCP链接请求，每个请求会创建会一个SocketChannel，一般是服务器实现)
 - DatagramChannel(用于UDP的数据读写)
 
+>应该注意的是，只有套接字 Channel 才能配置为非阻塞，而 FileChannel 不能，为 FileChannel 配置非阻塞也没有意义
 ---
 
 I/O 可以分为广义的两大类别： `File I/O`, `Stream I/O`,那么相应地有两种类型的通道也就不足为怪了，它们是文件（FileChannel 类）通道和套接字（ socket---SocketChannel、 ServerSocketChannel 和 DatagramChannel）通道.
