--- a/JAVA/EE/Netty/docs/1.7_Selector.md
+++ b/JAVA/EE/Netty/docs/1.7_Selector.md
@@ -26,6 +26,14 @@ channel.configureBlocking(false);
 SelectionKey key = channel.register(selector, Selectionkey.OP.READ);
 // 如果你对不止一种事件感兴趣，使用或运算符即可，如下：
 // int interest = SelectionKey.OP_READ | SelectionKey.OP_WRITE;   
+
+public static final int OP_READ = 1 << 0;
+public static final int OP_WRITE = 1 << 2;
+public static final int OP_CONNECT = 1 << 3;
+public static final int OP_ACCEPT = 1 << 4;
+
+// 可以看出每个事件可以被当成一个位域，从而组成事件集整数,如:
+int interestSet = SelectionKey.OP_READ | SelectionKey.OP_WRITE;
 ```
 
 ---
@@ -72,7 +80,7 @@ Selector提供了询问通道(Channel)是否已经准备好执行每个I/0操作
 
 1.   Set<SelectionKey>	keys() 返回SelectionKey集合，代表注册在该Selector上的channel
 2.   Set<SelectionKey>	selectedKeys()被选择的SelectionKey集合，返回此Selector的已选择键集。
-3.   int  select() 监控所有注册的Channel，当他们中间有需要处理的IO操作时，该方法返回，并将对应得SelectionKey加入被选择的SelectionKey集合中，该方法返回这些Channel的数量。
+3.   int  select() 监控所有注册的Channel，使用 select() 来监听到达的事件，它会一直阻塞直到有至少一个事件到达，该方法返回这些Channel的数量。
 4.   int select(long timeout) 选择一组键，其相应的通道已为 I/O 操作准备就绪。
 5.  Set<SelectionKey>	selectedKeys() 返回此选择器的已选择键集。
 6.  int	selectNow()  选择一组键，其相应的通道已为 I/O 操作准备就绪。
